grammar.js
    document: $ => seq(
      optional($.preamble),
      repeat($.section),
    ),

    preamble: $ => choice(
      $.namespace_declaration,
      $.conditional_include_statement,
      seq($.namespace_declaration, $.conditional_include_statement),
      seq($.conditional_include_statement, $.namespace_declaration),
    ),

    namespace_declaration: $ => seq(
      alias(/namespace/i, $.namespace_key),
      '=',
      optional(alias(namespace_regex, $.namespace)),
      $._newline,
    ),

    conditional_include_statement: $ => seq(
      alias(/condition/i, $.condition_key),
      '=',
      $.static_operational_expression,
      $._newline,
    ),

    constants_section_header: $ => seq(
      '[',
      alias(/Constants/i, $.header_identifier),
      optional(']'),
      $._newline,
    ),

    constants_section_body: $ => repeat1(choice(
      $.global_declaration,
      $.global_initialisation,
      $.primary_statement,
    )),

    constants_section: $ => seq(
      field('header', $.constants_section_header),
      optional(field('body', $.constants_section_body)),
    ),

    key_section_header: $ => seq(
      '[',
      alias($._key_header_prefix, $.header_prefix),
      alias($._suffixed_key_header, $.header_identifier),
      optional(']'),
      $._newline,
    ),

    key_section_body: $ => repeat1(choice(
      $.key_setting_statement,
      $.key_run_instruction,
      $.key_condition_statement,
      $.key_assignment_statement,
    )),

    key_section: $ => seq(
      field('header', $.key_section_header),
      optional(field('body', $.key_section_body)),
    ),

    key_setting_statement: $ => choice(
      seq(
        field('key', $._key_section_key),
        '=',
        field('value', $.key_section_value),
        $._newline,
      ),
      seq(
        field('key', alias($._key_section_listable_key, $.key_section_key)),
        '=',
        field('value', choice(list_seq($.numeric_constant, ','), list_seq(alias($.fixed_value, $.fixed_key_key_value), ','))),
        $._newline,
      ),
      seq(
        field('key', alias($._key_section_key_binding_key, $.key_section_key)),
        '=',
        field('value', $._specific_key_binding_value),
        $._newline,
      ),
    ),

    _key_section_key: $ => alias($.fixed_value, $.key_section_key),

    _key_section_key_binding_key: _ => token(/key|back/i),

    _key_section_listable_key: _ => token(/separation|convergence|(release_)?transition(_type)?/i),

    key_section_value: $ => choice(
      field('fixed_value', alias($.fixed_value, $.fixed_key_key_value)),
      $.boolean_value,
      $._static_value,
    ),

    key_run_instruction: $ => seq(
      alias(/run/i, $.instruction),
      '=',
      list_seq($.callable_commandlist, ','),
      $._newline,
    ),

    key_condition_statement: $ => seq(
      field('key', alias(/condition/i, $.condition_key)),
      '=',
      list_seq($._operational_expression, ','),
      $._newline,
    ),

    key_assignment_statement: $ => seq(
      field('name', choice(
        $.ini_parameter,
        $.named_variable,
      )),
      '=',
      field('expression', $.static_list_expression),
      $._newline,
    ),

    setting_section_header: $ => seq(
      '[',
      choice(
        alias(
          /(Logging|System|Device|Stereo|Rendering|Hunting|Profile|ConvergenceMap|Loader|Input)/i,
          $.header_identifier,
        ),
        choice(
          seq(
            alias(choice($._customresource_header_prefix, $._resourcepool_header_prefix), $.header_prefix),
            alias($._suffixed_resource_header, $.header_identifier),
          ),
          seq(
            alias($._include_header_prefix, $.header_prefix),
            alias($._suffixed_include_header, $.header_identifier),
          ),
        ),
      ),
      optional(']'),
      $._newline,
    ),

    setting_section_body: $ => repeat1($.setting_statement),

    setting_section: $ => seq(
      field('header', $.setting_section_header),
      optional(field('body', $.setting_section_body)),
    ),

    setting_statement: $ => choice(
      // general setting keys that don't need special handling
      seq(
        field('key', choice($._setting_statement_key, $._bracketed_setting_statement_key)),
        '=',
        field('value', $.setting_statement_value),
        $._newline,
      ),
      // the hash key needs to take free_text, which would normally conflict with fixed_value here
      seq(
        field('key', alias(/hash/i, $.setting_statement_key)),
        '=',
        field('value', alias($._hash_value, $.setting_statement_value)),
        $._newline,
      ),
      // the shader name keys used in custom shader sections which can be a path or null
      seq(
        field('key', alias(/[vhdgpc]s/i, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_custom_shader_value, $.setting_statement_value)),
        $._newline,
      ),
      // any keys that take KeyBindings, which can also be a single free_text node or single exception_character node
      seq(
        field('key', alias(setting_section_key_binding_keys, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_key_binding_value, $.setting_statement_value)),
        $._newline,
      ),
      // remaining keys that can take paths/files so a value that would have a conflict btwn fixed_value and free_text is always treated as a path
      seq(
        field('key', $._directory_setting_statement_key),
        '=',
        field('value', alias($._specific_directory_value, $.setting_statement_value)),
        $._newline,
      ),
      // the analyse_options key has a value that conflicts with the value of the marking_actions key
      // so unfortunately, because there is no backtracking and `mono_snapshot` is longer than `mono`
      // we need to do special handling for this key
      seq(
        field('key', alias(/analyse_options/i, $.setting_statement_key)),
        '=',
        field('value', alias($._frame_analysis_option_list, $.setting_statement_value)),
        $._newline,
      ),
    ),

    // $._hash_vale and $._frame_analysis_option_list
    // These exist only to keep the two special cases in line with how $.setting_statement_value is parsed for non-special situations
    // Basically, I need (setting_statement_value (_)) and not just (setting_statement_value)
    _hash_value: $ => $.free_text,

    _frame_analysis_option_list: $ => $.frame_analysis_option_list,

    _specific_custom_shader_value: $ => choice($.null, $._path_value),

    _specific_key_binding_value: $ => choice($.free_text, $.exception_character, $.key_binding_modifier, $.key_binding_expression),

    _specific_directory_value: $ => choice(alias($.free_text, $.path_key_value), $._path_value),

    _directory_setting_statement_key: $ =>
      // path/file only keys:
      alias(token(prec(-1, setting_section_directory_value_keys)), $.setting_statement_key),

    _bracketed_setting_statement_key: $ => alias(custom_shader_keys_with_brackets, $.setting_statement_key),

    _setting_statement_key: $ => alias($.fixed_value, $.setting_statement_key),

    setting_statement_value: $ => choice(
      $.resource_format,
      alias(resource_type_values, $.resource_type),
      $.boolean_value,
      $.string,
      $._path_value,
      $.static_operational_expression,
      $.fuzzy_match_expression,
      $._list_expression,
      field('fixed_value', alias($.fixed_value, $.fixed_setting_key_value)),
    ),

    commandlist_section_header: $ => seq(
      '[',
      choice(
        alias(/(Present|Clear(?:RenderTarget|DepthStencil)View|ClearUnorderedAccessView(?:Uint|Float))/i, $.header_identifier),
        seq(
          alias($._commandlist_header_prefix, $.header_prefix),
          alias($._suffixed_commandlist_header, $.header_identifier),
        ),
      ),
      optional(']'),
      $._newline,
    ),

    commandlist_section: $ => seq(
      field('header', $.commandlist_section_header),
      optional(field('body', alias($._block, $.commandlist_section_body))),
    ),

    local_initialisation: $ => seq(
      alias($._local, 'local'),
      field('variable', $.named_variable),
      '=',
      field('expression', $._operational_expression),
      $._newline,
    ),

    global_declaration: $ => choice(
      $._global_transient_declaration,
      $._global_persist_declaration,
      $._global_locked_declaration,
    ),

    global_initialisation: $ => choice(
      $._global_transient_initialisation,
      $._global_persist_initialisation,
      $._global_locked_initialisation,
    ),

    _global_transient_declaration: $ => seq(
      alias($._global, 'global'),
      field('variable', $.named_variable),
      $._newline,
    ),

    _global_persist_declaration: $ => seq(
      choice(
        seq(alias($._global, 'global'), alias($._persist, 'persist')),
        seq(alias($._persist, 'persist'), alias($._global, 'global')),
      ),
      field('variable', $.named_variable),
      $._newline,
    ),

    _global_locked_declaration: $ => seq(
      choice(
        seq(alias($._global, 'global'), alias($._locked, 'locked')),
        seq(alias($._locked, 'locked'), alias($._global, 'global')),
      ),
      field('variable', $.named_variable),
      $._newline,
    ),

    _global_transient_initialisation: $ => seq(
      alias($._global, 'global'),
      $._static_initialisation,
      $._newline,
    ),

    _global_persist_initialisation: $ => seq(
      choice(
        seq(alias($._global, 'global'), alias($._persist, 'persist')),
        seq(alias($._persist, 'persist'), alias($._global, 'global')),
      ),
      $._static_initialisation,
      $._newline,
    ),

    _global_locked_initialisation: $ => seq(
      choice(
        seq(alias($._global, 'global'), alias($._locked, 'locked')),
        seq(alias($._locked, 'locked'), alias($._global, 'global')),
      ),
      $._static_initialisation,
      $._newline,
    ),

    assignment_statement: $ => seq(
      optional($.execution_modifier),
      choice(
        seq(
          field('name', choice(
            $.ini_parameter,
            $._scalar_variable,
          )),
          '=',
          field('expression', $._operational_expression),
          $._newline,
        ),
        seq(
          field('name', $._limited_resource_operand),
          '=',
          field('expression', $.resource_usage_expression),
          $._newline,
        ),
        seq(
          prec.left(PREC.SUFFIX, seq(
            $._limited_resource_operand,
            field('operator', '->'),
            alias($.fixed_value, $.resource_property),
            field('arguments', $.arguments),
          )),
          '=',
          field('value', choice($.resource_format, $.integer)),
          $._newline,
        ),
        seq(
          field('name', $.callable_commandlist),
          '=',
          field('source', choice(
            $.null,
            seq(optional(alias(/ref(?:erence)?/i, $.proxy_modifier)), $.callable_commandlist),
          )),
        ),
      ),
    ),

    // adapted from tree-sitter-lua
    _block: ($) => repeat1(choice(
      $.setting_statement,
      $.primary_statement,
    )),

    // adapted from tree-sitter-lua
    conditional_statement: $ => seq(
      $.if_statement,
      repeat(field('alternative', $.elseif_statement)),
      optional(field('alternative', $.else_statement)),
      alias($._endif, 'endif'),
      $._newline,
    ),

    if_statement: $ => seq(
      alias($._if, 'if'),
      $._significant_ws,
      field('condition', $._operational_expression),
      $._newline,
      field('consequence', alias(optional($._block), $.block)),
    ),

    // adapted from tree-sitter-lua
    run_instruction: $ => seq(
      optional($.execution_modifier),
      alias(/run/i, $.instruction),
      '=',
      $._callable_section,
      $._newline,
    ),

    _list_expression: $ => choice(
      $.list_expression,
      $._fixed_value_list,
    ),

    // written to guarantee 2 or more desired nodes
    key_binding_expression: $ => seq(
      choice(
        $.key_binding_modifier,
        $.exception_character,
        $.free_text,
      ),
      repeat1(
        choice(
          $.key_binding_modifier,
          $.exception_character,
          $.free_text,
        ),
      ),
    ),

    exception_character: _ => token.immediate(prec(2, choice(';', '=', '/', '\\'))),

    key_binding_modifier: _ => /(?:(?:no_)?(?:vk_)?(?:ctrl|control|alt|shift|windows)|no_modifiers)/i,

    resource_usage_expression: $ => seq(
      repeat($.resource_modifier),
      $._resource_operand,
      repeat($.resource_modifier),
    ),

    resource_modifier: _ =>
      /(copy(?:_desc(?:ription)?)?|ref(?:erence)?|raw|stereo|mono|stereo2mono|set_viewport|no_view_cache|resolve_msaa|unless_null)/i,

    _resource_operand: $ => choice(
      $._language_variable,
      $.resource_identifier,
      $.custom_resource,
      $.resource_pool,
    ),

    _limited_resource_operand: $ => choice(
      $._limited_language_variable,
      $.resource_identifier,
      $.custom_resource,
      $.resource_pool,
    ),

    property_access_expression: $ => prec.left(PREC.SUFFIX, seq(
      $._resource_operand,
      field('operator', '->'),
      alias($.fixed_value, $.resource_property),
      // technically xxmi only allows a subset of operands as arguments
      // but we ignore that here for simplicity
      optional(field('arguments', $.arguments)),
    )),

    arguments: $ => seq(
      '(',
      list_seq(
        choice($._operational_expression, $.shader_semantic),
        ',',
        false,
      ),
      ')',
    ),

    static_binary_expression: $ => _generate_binary_expr_rule($.static_operational_expression),

    static_list_expression: $ => list_seq($._static_value, ','),

    _operational_expression: $ => choice(
      $.operational_expression,
      $._special_operational_expresssion,
    ),

    binary_expression: $ => _generate_binary_expr_rule($._operational_expression),

    // adapted from tree-sitter-lua
    unary_expression: $ => prec.right(
      PREC.UNARY,
      choice(
        seq(field('operator', choice('-', '+', '!', '~')), field('operand', $._operational_expression)),
        seq(field('operator', '@'), field('operand', choice($._resource_operand, alias($._resource_pool_base, $.resource_pool)))),
        seq(field('operator', '#'), field('operand', choice($.resource_pool, alias($._resource_pool_base, $.resource_pool)))),
      ),
    ),

    _scalar_variable: $ => choice(
      $.named_variable,
      $.pooled_variable,
    ),

    custom_resource: $ => seq(
      alias($._customresource_header_prefix, $.resource_prefix),
      $._useable_resource_identifier,
    ),

    resource_pool: $ => prec.left(PREC.SUFFIX, seq(
      $._resource_pool_base,
      alias($._index_suffix, $.index_expression),
    )),

    _resource_pool_base: $ => seq(
      alias($._resourcepool_header_prefix, $.resource_prefix),
      $._useable_resource_identifier,
    ),

    _useable_resource_identifier: $ => seq(
      optional($._namespace_resolution),
      alias($._custom_resource_identifier, $.section_identifier),
    ),

    _index_suffix: $ => seq(
      '[',
      choice($.numeric_constant, $._scalar_variable, $.runtime_parameter, '*'),
      ']',
    ),

    named_variable: $ => seq(
      '$',
      $._antiwhitespace, // XXX: Consider getting rid of this and folding functionality into following external rule
      $._pooled_variable_guard,
      optional($._namespace_resolution),
      alias(/[a-z_]\w+|[a-z]/i, $.variable_identifier),
    ),

    pooled_variable: $ => seq(
      '$',
      $._antiwhitespace, // XXX: Consider getting rid of this and folding functionality into following external rule
      $._pooled_variable_start,
      $.resource_pool,
    ),

    // Oh the BS I have to do to deal with tree-sitter's regex restrictions
