test/corpus/keys.txt
=====
Basic Toggle Key
=====

[KeyA]
condition = $active == 1
key = ] no_modifiers
back = [ no_modifiers
type = cycle
$swapvar = 0,1,2,3,4,5,6

---

(document
  (key_section
    header: (key_section_header
      (header_prefix)
      (header_identifier))
    body: (key_section_body
      (key_condition_statement
        key: (condition_key)
        (binary_expression
          left: (named_variable
            (variable_identifier))
          right: (numeric_constant)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_binding_expression
          (free_text)
          (key_binding_modifier)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_binding_expression
          (free_text)
          (key_binding_modifier)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_section_value
          fixed_value: (fixed_key_key_value)))
      (key_assignment_statement
        name: (named_variable
          (variable_identifier))
        expression: (static_list_expression
          (numeric_constant)
          (numeric_constant)
          (numeric_constant)
          (numeric_constant)
          (numeric_constant)
          (numeric_constant)
          (numeric_constant))))))

=====
Basic Hold Key
=====

[KeyB]
condition = $active == 1
key = ALT N NO_CTRL NO_SHIFT
type = hold
run = CommandListRunGlowEffect

---

(document
  (key_section
    header: (key_section_header
      (header_prefix)
      (header_identifier))
    body: (key_section_body
      (key_condition_statement
        key: (condition_key)
        (binary_expression
          left: (named_variable
            (variable_identifier))
          right: (numeric_constant)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_binding_expression
          (key_binding_modifier)
          (free_text)
          (key_binding_modifier)
          (key_binding_modifier)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_section_value
          fixed_value: (fixed_key_key_value)))
      (key_run_instruction
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (section_identifier))))))

=====
Special Character Keys
=====

[KeySpecial1]
key = ;

[KeySpecial2]
key = alt ;
back = shift ; no_alt

[KeySpecial3]
key = =
back = minus no_modifiers

[KeyModifierOnly]
key = VK_ALT
condition = $active
type = hold
$var = 4

---

(document
  (key_section
    (key_section_header
      (header_prefix)
      (header_identifier))
    (key_section_body
      (key_setting_statement
        (key_section_key)
        (exception_character))))
  (key_section
    (key_section_header
      (header_prefix)
      (header_identifier))
    (key_section_body
      (key_setting_statement
        (key_section_key)
        (key_binding_expression
          (key_binding_modifier)
          (exception_character)))
      (key_setting_statement
        (key_section_key)
        (key_binding_expression
          (key_binding_modifier)
          (exception_character)
          (key_binding_modifier)))))
  (key_section
    (key_section_header
      (header_prefix)
      (header_identifier))
    (key_section_body
      (key_setting_statement
        (key_section_key)
        (exception_character))
      (key_setting_statement
        (key_section_key)
        (key_binding_expression
          (free_text)
          (key_binding_modifier)))))
  (key_section
    (key_section_header
      (header_prefix)
      (header_identifier))
    (key_section_body
      (key_setting_statement
        (key_section_key)
        (key_binding_modifier))
      (key_condition_statement
        (condition_key)
        (named_variable
          (variable_identifier)))
      (key_setting_statement
        (key_section_key)
        (key_section_value
          (fixed_key_key_value)))
      (key_assignment_statement
        (named_variable
          (variable_identifier))
        (static_list_expression
          (numeric_constant))))))

=====
Run Toggles
=====

[KeyC]
condition = $active == 1
key = ALT /
back = ALT \
type = cycle
run = CommandListGlowA, CommandListGlowB, CommandListGlowC

---

(document
  (key_section
    header: (key_section_header
      (header_prefix)
      (header_identifier))
    body: (key_section_body
      (key_condition_statement
        key: (condition_key)
        (binary_expression
          left: (named_variable
            (variable_identifier))
          right: (numeric_constant)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_binding_expression
          (key_binding_modifier)
          (exception_character)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_binding_expression
          (key_binding_modifier)
          (exception_character)))
      (key_setting_statement
        key: (key_section_key)
        value: (key_section_value
          fixed_value: (fixed_key_key_value)))
      (key_run_instruction
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (section_identifier))
        (callable_commandlist
          (callable_prefix)
          (section_identifier))
        (callable_commandlist
          (callable_prefix)
          (section_identifier))))))

=====
Condition Switching
=====

[KeyD]
condition = $active == 1 && $var1, $active == 1 && $var2, $active == 0
key = n
back = p
type = cycle
run = CommandList Effect 1, CommandList Effect 2, CommandList CleanUp

---

(document
  (key_section
    header: (key_section_header
      (header_prefix)
      (header_identifier))
    body: (key_section_body
      (key_condition_statement
        key: (condition_key)
        (binary_expression
          left: (binary_expression
            left: (named_variable
              (variable_identifier))
            right: (numeric_constant))
          right: (named_variable
            (variable_identifier)))
        (binary_expression
          left: (binary_expression
            left: (named_variable
              (variable_identifier))
            right: (numeric_constant))
          right: (named_variable
            (variable_identifier)))
        (binary_expression
          left: (named_variable
            (variable_identifier))
          right: (numeric_constant)))
      (key_setting_statement
        key: (key_section_key)
        value: (free_text))
      (key_setting_statement
        key: (key_section_key)
        value: (free_text))
      (key_setting_statement
        key: (key_section_key)
        value: (key_section_value
          fixed_value: (fixed_key_key_value)))
      (key_run_instruction
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (section_identifier))
        (callable_commandlist
          (callable_prefix)
          (section_identifier))
        (callable_commandlist
          (callable_prefix)
          (section_identifier))))))

=====
Extra Listables
=====

[KeyE]
condition = $active == 1 && $var1, $active == 1 && $var2, $active == 0
key = n
back = p
type = cycle
wrap = true
separation = 1, 2, 0
convergence = 2, 1, 0
transition = 2, 3, 0
transition_type = linear, cosine, linear
w = 9, 2, 6

---

(document
  (key_section
    (key_section_header
      (header_prefix)
      (header_identifier))
    (key_section_body
      (key_condition_statement
        (condition_key)
        (binary_expression
          (binary_expression
            (named_variable
              (variable_identifier))
            (numeric_constant))
          (named_variable
            (variable_identifier)))
        (binary_expression
          (binary_expression
            (named_variable
              (variable_identifier))
            (numeric_constant))
          (named_variable
            (variable_identifier)))
        (binary_expression
          (named_variable
            (variable_identifier))
          (numeric_constant)))
      (key_setting_statement
        (key_section_key)
        (free_text))
      (key_setting_statement
        (key_section_key)
        (free_text))
      (key_setting_statement
        (key_section_key)
        (key_section_value
          (fixed_key_key_value)))
      (key_setting_statement
        (key_section_key)
        (key_section_value
          (boolean_value)))
      (key_setting_statement
        (key_section_key)
        (numeric_constant)
        (numeric_constant)
        (numeric_constant))
      (key_setting_statement
        (key_section_key)
        (numeric_constant)
        (numeric_constant)
        (numeric_constant))
      (key_setting_statement
        (key_section_key)
        (numeric_constant)
        (numeric_constant)
        (numeric_constant))
      (key_setting_statement
        (key_section_key)
        (fixed_key_key_value)
        (fixed_key_key_value)
        (fixed_key_key_value))
      (key_assignment_statement
        (ini_parameter)
        (static_list_expression
          (numeric_constant)
          (numeric_constant)
          (numeric_constant))))))
