test/corpus/pools.txt
====
Resource Pools
====

[PoolFoo]
pool_size = 2

[ResourceText]
type = Buffer
data = "Text"

[Present]
PoolFoo[0] = ref ResourceText

local $src = 0
local $dst = 1

PoolFoo[$dst] = ref PoolFoo[$src]

local $pool_size = #PoolFoo

local $resource_text_id = @ResourceText
local $pool_resource_0_id = @PoolFoo[0]
local $pool_resource_1_id = @PoolFoo[1]

local $same_buffer = $resource_text_id == $pool_resource_0_id && $pool_resource_0_id == $pool_resource_1_id

; The more direct way also works:
local $same_buffer = @ResourceText == @PoolFoo[0] && @PoolFoo[0] == @PoolFoo[1]

---

(document
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (numeric_constant)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_type)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (string)))))
  (commandlist_section
    (commandlist_section_header
      (header_identifier))
    (commandlist_section_body
      (assignment_statement
        (resource_pool
          (resource_prefix)
          (section_identifier)
          (index_expression
            (numeric_constant)))
        (resource_usage_expression
          (resource_modifier)
          (custom_resource
            (resource_prefix)
            (section_identifier))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (numeric_constant))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (numeric_constant))
      (assignment_statement
        (resource_pool
          (resource_prefix)
          (section_identifier)
          (index_expression
            (named_variable
              (variable_identifier))))
        (resource_usage_expression
          (resource_modifier)
          (resource_pool
            (resource_prefix)
            (section_identifier)
            (index_expression
              (named_variable
                (variable_identifier))))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (unary_expression
          (resource_pool
            (resource_prefix)
            (section_identifier))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (unary_expression
          (custom_resource
            (resource_prefix)
            (section_identifier))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (unary_expression
          (resource_pool
            (resource_prefix)
            (section_identifier)
            (index_expression
              (numeric_constant)))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (unary_expression
          (resource_pool
            (resource_prefix)
            (section_identifier)
            (index_expression
              (numeric_constant)))))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (binary_expression
          (binary_expression
            (named_variable
              (variable_identifier))
            (named_variable
              (variable_identifier)))
          (binary_expression
            (named_variable
              (variable_identifier))
            (named_variable
              (variable_identifier)))))
      (comment)
      (local_initialisation
        (named_variable
          (variable_identifier))
        (binary_expression
          (binary_expression
            (unary_expression
              (custom_resource
                (resource_prefix)
                (section_identifier)))
            (unary_expression
              (resource_pool
                (resource_prefix)
                (section_identifier)
                (index_expression
                  (numeric_constant)))))
          (binary_expression
            (unary_expression
              (resource_pool
                (resource_prefix)
                (section_identifier)
                (index_expression
                  (numeric_constant))))
            (unary_expression
              (resource_pool
                (resource_prefix)
                (section_identifier)
                (index_expression
                  (numeric_constant))))))))))

====
Property Access Function Call
====

[PoolMergedSkeletonsRW]
pool_index_type = spatial
pool_size = 4
pool_spatial_radius = 3

[CommandListTest]
$spatial_hash = ResourceTemp1->SpatialHash(12, 13, 14, 0.125)
PoolMergedSkeletonsRW[$spatial_hash] = copy ResourceTemp1
$unnecessary = PoolMergedSkeletonsRW[$spatial_hash]->SpatialHash(12,13,14,0.125)

---

(document
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (fixed_setting_key_value)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (numeric_constant)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (numeric_constant)))))
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (commandlist_section_body
      (assignment_statement
        (named_variable
          (variable_identifier))
        (property_access_expression
          (custom_resource
            (resource_prefix)
            (section_identifier))
          (resource_property)
          (arguments
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant))))
      (assignment_statement
        (resource_pool
          (resource_prefix)
          (section_identifier)
          (index_expression
            (named_variable
              (variable_identifier))))
        (resource_usage_expression
          (resource_modifier)
          (custom_resource
            (resource_prefix)
            (section_identifier))))
      (assignment_statement
        (named_variable
          (variable_identifier))
        (property_access_expression
          (resource_pool
            (resource_prefix)
            (section_identifier)
            (index_expression
              (named_variable
                (variable_identifier))))
          (resource_property)
          (arguments
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)))))))

====
Pooled Variable Usage
====

[CommandListSetShapeKey]
; Check the last set value for this $component_id and $shapekey_id...
local $value_uid = $component_id * $shapekeyed_comp_max_batches * $\MI\cfg_sk_batch_size + $shapekey_id
if $shapekey_value != $Pool_ShapeKeys_LastSetValues[$value_uid]
    ; ... and submit new value to GPU only if it is different.
    ; Calling `ShapeKeySetter` just writes new value to buffer, geometry update is deferred.
    $Pool_ShapeKeys_LastSetValues[$value_uid] = $shapekey_value
    $\MI\shapekey_id = $shapekey_id
    $\MI\shapekey_value = $shapekey_value
    Resource\MI\Output_ShapeKeyValues = ref Pool_ShapeKeyValuesRW[$component_id]
    run = CustomShader\MI\ShapeKeySetter
    ; Signal `CommandList_ShapeKeys_Apply` geometry updater that new value was submitted in this frame.
    $Pool_ShapeKeys_Component_UpdateID[$component_id] = FRAME_NUMBER
endif

----

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (comment)
    (commandlist_section_body
      (local_initialisation
        (named_variable
          (variable_identifier))
        (binary_expression
          (binary_expression
            (binary_expression
              (named_variable
                (variable_identifier))
              (named_variable
                (variable_identifier)))
            (named_variable
              (namespace)
              (variable_identifier)))
          (named_variable
            (variable_identifier))))
      (conditional_statement
        (if_statement
          (binary_expression
            (named_variable
              (variable_identifier))
            (pooled_variable
              (resource_pool
                (resource_prefix)
                (section_identifier)
                (index_expression
                  (named_variable
                    (variable_identifier))))))
          (comment)
          (comment)
          (block
            (assignment_statement
              (pooled_variable
                (resource_pool
                  (resource_prefix)
                  (section_identifier)
                  (index_expression
                    (named_variable
                      (variable_identifier)))))
              (named_variable
                (variable_identifier)))
            (assignment_statement
              (named_variable
                (namespace)
                (variable_identifier))
              (named_variable
                (variable_identifier)))
            (assignment_statement
              (named_variable
                (namespace)
                (variable_identifier))
              (named_variable
                (variable_identifier)))
            (assignment_statement
              (custom_resource
                (resource_prefix)
                (namespace)
                (section_identifier))
              (resource_usage_expression
                (resource_modifier)
                (resource_pool
                  (resource_prefix)
                  (section_identifier)
                  (index_expression
                    (named_variable
                      (variable_identifier))))))
            (run_instruction
              (instruction)
              (callable_customshader
                (callable_prefix)
                (namespace)
                (section_identifier)))
            (comment)
            (assignment_statement
              (pooled_variable
                (resource_pool
                  (resource_prefix)
                  (section_identifier)
                  (index_expression
                    (named_variable
                      (variable_identifier)))))
              (runtime_parameter))))))))
