test/corpus/preamble.txt
=====================
Namespace declaration
=====================

; A comment before the preamble keys
namespace = lupomikti/character/mod_name
; A comment after the key
; A second comment

---

(document
  (comment)
  (preamble
    (namespace_declaration
      (namespace_key)
      (namespace)))
  (comment)
  (comment))

=====================
Empty Namespace Declaration
=====================

namespace =

---

(document
  (preamble
    (namespace_declaration
      (namespace_key))))

================
Complex Preamble
================

; A comment before the preamble statements
namespace = lupomikti/character/mod_name
; A comment between the statements
condition = hunting == 0
; A comment after the statements
; A second comment

---

(document
  (comment)
  (preamble
    (namespace_declaration
      (namespace_key)
      (namespace))
    (comment)
    (conditional_include_statement
      (condition_key)
      (static_binary_expression
        left: (runtime_parameter)
        right: (numeric_constant))))
  (comment)
  (comment))
